Developer can implement  "No record found" text or image easily

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RecyclerViewSupportEmptyTextImage</string>
+    <string name="title_activity_basic_adapter">BasicAdapterActivity</string>
 </resources>
